# MySkype

./: .gitignore  CmakeConstants.cmake  CmakeLists.txt  CmakeUtilsFunctions.cmake  README.md  build.bat
BaseObjects/: Blob.cpp  Blob.h  CMakeLists.txt  CommonDefs.h  FileUtils.cpp  FileUtils.h  INetworkMessagesListener.h  Logger.cpp  Logger.h  NetworkMessageProvider.cpp  NetworkMessagesProvider.h  ProcessUtils.cpp  ProcessUtils.h
Client/: ChatClient.cpp  ChatClient.h  Client.cpp  Client.h  CmakeLists.txt
CommonDefs/: CMakeLists.txt
Docs/: MySkype.vpp  MySkype.vpp~7  MySkype.vux
NetworkLib/: CMakeLists.txt  ClientLoginMessage.cpp  ClientLoginMessage.h  ClientManagmentMessage.cpp  ClientManagmentMessage.h  ClientRegistration.cpp  ClientRegistration.h  ClientRegistrationMessage.cpp  ClientRegistrationMessage.h  Connection.cpp  Connection.h  Endpoint.cpp  Endpoint.h  Header.cpp  Header.h  IConnection.h  ISessionListener.h  ISessionRole.h  ISessionSendListener.h  IoServiceThreadsPoolManager.cpp  IoServiceThreadsPoolManager.h  NetworkDefs.h  NetworkMessage.cpp  NetworkMessage.h  Ping.cpp  Ping.h  PingMessage.cpp  PingMessage.h  Pong.cpp  Pong.h  PongMessage.cpp  PongMessage.h  Session.cpp  Session.h  SessionProvider.cpp  SessionProvider.h  SessionRole.cpp  SessionRole.h  SessionSendProvider.cpp  SessionSendProvider.h  (+8 more)
NetworkUtilsLib/: CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  NetworkDefs.h  NetworkMessage.cpp  NetworkMessage.h  Ping.cpp  Ping.h  Pong.cpp  Pong.h
ODBCHelperLib/: CMakeLists.txt  NanoODBCHelper.cpp  NanoODBCHelper.h  NanoODBCUnicodeUtils.h  nanodbc.cpp  nanodbc.h
SerealizationUtilsLib/: BinarySerializer.cpp  BinarySerializer.h  Blob.cpp  Blob.h  CMakeLists.txt  JSONSerializer.h  Serealizer.cpp  Serealizer.h  Serializer.cpp  Serializer.h  XMLSerializer.h
SerializationLib/: Blob.cpp  Blob.h  CMakeLists.txt  Common.h  Deserializer.cpp  Deserializer.h  DeserializerBase.cpp  DeserializerBase.h  ISerializable.h  PolymorphSerializable.h  Serializer.cpp  Serializer.h  SerializerBase.cpp  SerializerBase.h  stdafx.h
Server/: CMakeLists.txt  ClientsManager.cpp  ClientsManager.h  DBClientsManagmentConfig.cpp  DBClientsManagmentConfig.h  DBClientsManagmentHelper.cpp  DBClientsManagmentHelper.h  EventDispatcher.cpp  EventDispatcher.h  IUser.h  Server.cpp  Server.h  Session.cpp  Session.h  TCPSession.cpp  TCPSession.h  UsersGroup.cpp  UsersGroup.h  UsersManager.cpp  UsersManager.h
ServerManagers/: CMakeLists.txt  UsersManager.cpp  UsersManager.h
ServerObjects/: CMakeLists.txt  Client.cpp  Client.h  EntitiesDefs.h  IBaseEntity.h  IEntitiesVisitor.h  User.cpp  User.h  UsersGroup.cpp  UsersGroup.h
Tests/: CMakeLists.txt  ConnectionsTest.cpp  DummyTest.cpp  LoggerTest.cpp  ODBCHelperTest.cpp  Program.cpp  SerializationTest.cpp  XMLTest.cpp
Tests/DummyTest/: CMakeLists.txt  DummyTest.cpp
ThreadsUtilsLib/: CMakeLists.txt  RunningContext.cpp  RunningContext.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  ThreadsJoiner.h
XmlLib/: CMakeLists.txt  XMLBSFFindStrategy.cpp  XMLBSFFindStrategy.h  XMLDocument.cpp  XMLDocument.h  XMLElement.cpp  XMLElement.h  XMLFindStrategy.h  XMLUtils.h  testXml.xml
